--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
       - key: ALLOWED_HOSTS
         value: "learning-logs.gleeze.com, learning-log-jlxy.onrender.com"
       - key: CSRF_TRUSTED_ORIGINS
-        value: "https://learning-logs.gleeze.com, https://learning-log-jlxy.onrender.com/"
+        value: "https://learning-logs.gleeze.com, https://learning-log-jlxy.onrender.com"
       - key: DATABASE_URL
         fromDatabase:
           name: learninglog-db
